compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__field_not_in_all_variants.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 611
expression: "\npub type Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_title(person: Person) { person.title }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, age: Int, title: String)
    Student(name: String, age: Int)
}
pub fn get_title(person: Person) { person.title }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:6:43
  │
6 │ pub fn get_title(person: Person) { person.title }
  │                                           ^^^^^ This field does not exist

The value being accessed has this type:

    Person

It has these accessible fields:

    .age
    .name

Note: The field you are trying to access is not defined consistently across
all variants of this custom type. To fix this, ensure that all variants
include the field with the same name, position, and type.
